# caseify

./: Cargo.toml  README.md
.github/workflows/: taplo.yml
src/: cli.rs  lib.rs  main.rs
src/bin_helper/: cli.rs  mod.rs  status.rs
src/parser/: case.rs  caseify.rs  char_type.rs  mod.rs
tests/: cli.rs
