[package]
name = "caseify"
version = "0.1.2"
edition = "2024"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
description = "A CLI tool to convert strings between different cases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/t-webber/caseify"
readme = "README.md"
keywords = ["case", "cli", "string", "conversion", "pipes"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "text-processing",
  "value-formatting",
]

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }

[lib]
name = "caseify"

[[bin]]
name = "caseify"
path = "src/main.rs"
